# Warehouse_django

./: db.sqlite3  pyproject.toml
magazine/: settings.py  urls.py
magazine_auth/: apps.py  forms.py  urls.py  views.py
magazine_auth/templates/magazine_auth/: layout.html  login.html
magazine_main/: admin.py  apps.py  forms.py  models.py  urls.py
magazine_main/migrations/: 0001_initial.py  0002_alter_item_serial_number.py  0002_auto_20220227_2258.py  0003_alter_borrowed_amount.py  0003_item_borrowed.py  0004_alter_borrowed_options.py
magazine_main/templates/: manage_warehouse.html
magazine_main/templates/magazine_main/: borrowed_list.html  layout.html  manage_warehouse.html
magazine_main/views/: __init__.py  index.py  manage_warehouse.py
